Add a few images to main page

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
   </head>
   <body>
     <h1>Ometepe Art and Education</h1>
+    <div class="container">
+      <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
+    </div>
+    <h3>Information Coming Soon . . .</h3>
+    <div class="container">
+      <img src="linda.jpg" alt="A Beautiful Little Girl" />
+    </div>
+    <h3>Website Under Construction . . .</h3>
   </body>
 </html>
