--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <h1>Ometepe Art and Education</h1>
+    <h2>Offering Daycare, Art & Dance Lessons</h2>
+    <h3>Immersion in Central American Culture</h3>
     <div class="container">
       <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
     </div>
@@ -23,5 +25,6 @@
       <img src="linda.jpg" alt="A Beautiful Little Girl" />
     </div>
     <h3>Website Under Construction . . .</h3>
+    <h2><span>&copy</span> Ometepe Art & Education 2021</h2>
   </body>
 </html>
