--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
   </head>
   <body>
     <h1>Ometepe Art and Education</h1>
-    <h2>Offering Daycare, Art & Dance Lessons</h2>
+    <h2>Offering Bilingual Daycare, Art & Dance Lessons</h2>
     <h3>Immersion in Central American Culture</h3>
     <div class="container">
       <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
     </div>
-    <h3>Information Coming Soon . . .</h3>
+    <h3>Information Coming Soon - in both English & Spanish &hearts;</h3>
     <div class="container">
       <img src="linda.jpg" alt="A Beautiful Little Girl" />
     </div>
     <h3>Website Under Construction . . .</h3>
-    <h2><span>&copy</span> Ometepe Art & Education 2021</h2>
+    <h4><em>ometepeartandeducation@gmail.com</em></h4>
+    <h4><span>&copy</span> Ometepe Art & Education 2021</h4>
   </body>
 </html>
