Adjust content of h3 titles on main page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <h1>Ometepe Art and Education</h1>
-    <h2>Offering Bilingual Daycare, Art & Dance Lessons</h2>
+    <h2>Offering Bilingual Daycare</h2>
+    <h3>Art Lessons & Dance Lessons</h3>
     <h3>Immersion in Central American Culture</h3>
     <div class="container">
       <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
