Initial bulma spacing, trim own styling

--- a/index.html
+++ b/index.html
@@ -14,19 +14,27 @@
     <title>OmetepArt&Education</title>
   </head>
   <body>
-    <h1>Ometepe Art and Education</h1>
-    <h2>Offering Bilingual Daycare</h2>
-    <h3>Art Lessons & Dance Lessons</h3>
-    <h3>Immersion in Central American Culture</h3>
-    <div class="container">
-      <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
+    <div class="section has-text-centered">
+      <h1 class="is-size-1 has-text-weight-light has-text-light">Ometepe Art and Education</h1>
+      <h2 class="has-text-light">Offering Bilingual Daycare</h2>
+      <h3 class="has-text-light">Art Lessons & Dance Lessons</h3>
+      <h3 class="has-text-light">Immersion in Central American Culture</h3>
     </div>
-    <h3>Information Coming Soon - in both English & Spanish &hearts;</h3>
-    <div class="container">
-      <img src="linda.jpg" alt="A Beautiful Little Girl" />
+
+    <div class="container is-centered-flexy">
+      <figure class="image">
+        <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
+      </figure>
+
+      <h3 class="has-text-light">Information Coming Soon - in both English & Spanish &hearts;</h3>
+      <figure class="image"><img src="linda.jpg" alt="A Beautiful Little Girl" /></figure>
     </div>
-    <h3>Website Under Construction . . .</h3>
-    <h4><em>ometepeartandeducation@gmail.com</em></h4>
-    <h4><span>&copy</span> Ometepe Art & Education 2021</h4>
+    <div class="section has-text-centered">
+      <h3 class="has-text-light">Website Under Construction . . .</h3>
+      <h4 class="has-text-light"><em>ometepeartandeducation@gmail.com</em></h4>
+    </div>
+    <div class="section has-text-centered">
+      <h4 class="has-text-light"><span>&copy</span> Ometepe Art & Education 2021</h4>
+    </div>
   </body>
 </html>
