Add navbar, plus mobile version, fix font size, add footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -14,27 +20,50 @@
     <title>OmetepArt&Education</title>
   </head>
   <body>
+    <nav class="navbar has-background-info-light">
+      <div class="navbar-brand pl-4 ml-5">
+        <a href="#" class="navbar-item is-size-2">
+          <figure>
+            <i class="fas fa-palette"></i>
+          </figure>
+        <a/>
+        <a class="navbar-burger" id="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </div>
+        <div class="navbar-menu pr-5 mr-5" id="nav-links">
+          <div class="navbar-end is-size-5">
+            <a href="#" class="navbar-item">Our Story</a>
+            <a href="#" class="navbar-item">Artists in Residence</a>
+            <a href="#" class="navbar-item">Staff</a>
+            <a href="#" class="navbar-item">Location</a>
+            <a href="#" class="navbar-item">Contact</a>
+          </div>
+        </div>
+    </nav>
     <div class="section has-text-centered">
       <h1 class="is-size-1 has-text-weight-light has-text-light">Ometepe Art and Education</h1>
-      <h2 class="has-text-light">Offering Bilingual Daycare</h2>
-      <h3 class="has-text-light">Art Lessons & Dance Lessons</h3>
-      <h3 class="has-text-light">Immersion in Central American Culture</h3>
+      <h2 class="has-text-light is-size-3">Offering Bilingual Daycare</h2>
+      <h3 class="has-text-light is-size-3">Art Lessons & Dance Lessons</h3>
+      <h3 class="has-text-light is-size-3">Immersion in Central American Culture</h3>
     </div>
 
     <div class="container is-centered-flexy">
       <figure class="image">
         <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
-
-      <h3 class="has-text-light">Information Coming Soon - in both English & Spanish &hearts;</h3>
+      <h3 class="has-text-light is-size-3 py-6">Information Coming Soon - in both English & Spanish &hearts;</h3>
       <figure class="image"><img src="linda.jpg" alt="A Beautiful Little Girl" /></figure>
     </div>
     <div class="section has-text-centered">
-      <h3 class="has-text-light">Website Under Construction . . .</h3>
-      <h4 class="has-text-light"><em>ometepeartandeducation@gmail.com</em></h4>
+      <h3 class="has-text-light is-size-2">Website Under Construction . . .</h3>
+      <h4 class="has-text-light is-size-4"><em>ometepeartandeducation@gmail.com</em></h4>
     </div>
-    <div class="section has-text-centered">
-      <h4 class="has-text-light"><span>&copy</span> Ometepe Art & Education 2021</h4>
-    </div>
+    <footer class="footer has-text-centered has-background-info-light">
+      <h4 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
+    <footer/>
+    <script src="index.js"></script>
   </body>
 </html>
