--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <nav class="navbar has-background-info-light">
-      <div class="navbar-brand pl-4 ml-5">
+      <div class="navbar-brand pl-4">
         <a href="#" class="navbar-item is-size-2">
           <figure>
             <i class="fas fa-palette"></i>
@@ -33,7 +33,7 @@
           <span></span>
         </a>
       </div>
-        <div class="navbar-menu pr-5 mr-5" id="nav-links">
+        <div class="navbar-menu mr-5" id="nav-links">
           <div class="navbar-end is-size-5">
             <a href="#" class="navbar-item">Our Story</a>
             <a href="#" class="navbar-item">Artists in Residence</a>
