Add Events link to navbar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <a href="#" class="navbar-item">Artists in Residence</a>
             <a href="#" class="navbar-item">Staff</a>
             <a href="#" class="navbar-item">Location</a>
+            <a href="#" class="navbar-item">Events</a>
             <a href="#" class="navbar-item">Contact</a>
           </div>
         </div>
