Center a heading block on landing page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <figure class="image">
         <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
-      <h3 class="has-text-light is-size-3 py-6">Information Coming Soon - in both English & Spanish &hearts;</h3>
+      <h3 class="has-text-light is-size-3 py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
       <figure class="image"><img src="linda.jpg" alt="A Beautiful Little Girl" /></figure>
     </div>
     <div class="section has-text-centered">
