Add image and make minor content changes to homepage

--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
             <a href="#" class="navbar-item">Location</a>
             <a href="#" class="navbar-item">Events</a>
             <a href="#" class="navbar-item">Contact</a>
+            <a href="#" class="navbar-item">En Español</a>
           </div>
         </div>
     </nav>
     <div class="section has-text-centered">
-      <h1 class="is-size-1 has-text-weight-light has-text-light">Ometepe Art and Education</h1>
+      <h1 class="is-size-1 has-text-light has-text-weight-light title">Ometepe Art and Education</h1>
+      <h2 class=" is-italic is-size-3 has-text-weight-light has-text-light subtitle">A Place to Learn in a Beautifully Diverse World</h2>
+
       <h2 class="has-text-light is-size-3">Offering Bilingual Daycare</h2>
       <h3 class="has-text-light is-size-3">Art Lessons & Dance Lessons</h3>
-      <h3 class="has-text-light is-size-3">Immersion in Central American Culture</h3>
+      <h3 class="has-text-light is-size-3">Celebrating Central American Culture</h3>
     </div>
 
     <div class="container is-centered-flexy">
@@ -56,6 +59,9 @@
         <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
       <h3 class="has-text-light is-size-3 py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
+      <figure class="image">
+        <img class="pb-6" src="houses.jpg" alt="Houses in Chinandega" />
+      </figure>
       <figure class="image"><img src="linda.jpg" alt="A Beautiful Little Girl" /></figure>
     </div>
     <div class="section has-text-centered">
