--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
         <div class="navbar-menu mr-5" id="nav-links">
           <div class="navbar-end is-size-5">
-            <a href="#" class="navbar-item">Our Story</a>
-            <a href="#" class="navbar-item">Artists in Residence</a>
+            <a href="#" class="navbar-item">Our Mission</a>
+            <a href="#" class="navbar-item">Artists</a>
             <a href="#" class="navbar-item">Staff</a>
             <a href="#" class="navbar-item">Location</a>
             <a href="#" class="navbar-item">Events</a>
@@ -49,20 +49,19 @@
       <h1 class="is-size-1 has-text-light has-text-weight-light title">Ometepe Art and Education</h1>
       <h2 class=" is-italic is-size-3 has-text-weight-light has-text-light subtitle">A Place to Learn in a Beautifully Diverse World</h2>
 
-      <h2 class="has-text-light is-size-3">Offering Bilingual Daycare</h2>
       <h3 class="has-text-light is-size-3">Art Lessons & Dance Lessons</h3>
       <h3 class="has-text-light is-size-3">Celebrating Central American Culture</h3>
     </div>
 
     <div class="container is-centered-flexy">
       <figure class="image">
-        <img src="machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
+        <img src="images/machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
       <h3 class="has-text-light is-size-3 py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
       <figure class="image">
-        <img class="pb-6" src="houses.jpg" alt="Houses in Chinandega" />
+        <img class="pb-6" src="images/houses.jpg" alt="Houses in Chinandega" />
       </figure>
-      <figure class="image"><img src="linda.jpg" alt="A Beautiful Little Girl" /></figure>
+      <figure class="image"><img src="images/linda.jpg" alt="A Beautiful Little Girl" /></figure>
     </div>
     <div class="section has-text-centered">
       <h3 class="has-text-light is-size-2">Website Under Construction . . .</h3>
@@ -71,6 +70,6 @@
     <footer class="footer has-text-centered has-background-info-light">
       <h4 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
     <footer/>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
