--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     <nav class="navbar has-background-info-light">
       <div class="navbar-brand pl-4">
         <a href="#" class="navbar-item is-size-2">
-          <figure>
+          <span class="icon-text">
+          <span class="icon">
             <i class="fas fa-palette"></i>
-          </figure>
+        </span>
+          <span class="is-size-5 pl-4">Nicaraguan Art</span>
+         </span>
         <a/>
         <a class="navbar-burger" id="burger">
           <span></span>
@@ -47,7 +50,7 @@
     </nav>
     <div class="section has-text-centered">
       <h1 class="is-size-1 has-text-light has-text-weight-light title">Ometepe Art and Education</h1>
-      <h2 class=" is-italic is-size-3 has-text-weight-light has-text-light subtitle">A Place to Learn in a Beautifully Diverse World</h2>
+      <h2 class=" is-italic is-size-4 has-text-weight-light has-text-light subtitle">Adding Our Voices to a Beautifully Diverse World</h2>
 
       <h3 class="has-text-light is-size-3">Art Lessons & Dance Lessons</h3>
       <h3 class="has-text-light is-size-3">Celebrating Central American Culture</h3>
@@ -57,18 +60,18 @@
       <figure class="image">
         <img src="images/machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
-      <h3 class="has-text-light is-size-3 py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
+      <h3 class="has-text-light is-size-4 py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
       <figure class="image">
         <img class="pb-6" src="images/houses.jpg" alt="Houses in Chinandega" />
       </figure>
       <figure class="image"><img src="images/linda.jpg" alt="A Beautiful Little Girl" /></figure>
     </div>
     <div class="section has-text-centered">
-      <h3 class="has-text-light is-size-2">Website Under Construction . . .</h3>
-      <h4 class="has-text-light is-size-4"><em>ometepeartandeducation@gmail.com</em></h4>
+      <h3 class="has-text-light is-size-3">Website Under Construction . . .</h3>
+      <h4 class="has-text-light is-size-5"><em>ometepeartandeducation@gmail.com</em></h4>
     </div>
     <footer class="footer has-text-centered has-background-info-light">
-      <h4 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
+      <h4 class="is-size-5"><span>&copy</span> Ometepe Art & Education 2021</h4>
     <footer/>
     <script src="js/index.js"></script>
   </body>
