Change header and footer to white color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>OmetepArt&Education</title>
   </head>
   <body>
-    <nav class="navbar has-background-info-light">
+    <nav class="navbar has-shadow is-white">
       <div class="navbar-brand pl-4">
         <a href="#" class="navbar-item is-size-2">
           <span class="icon-text">
@@ -70,7 +70,7 @@
       <h3 class="has-text-light is-size-3">Website Under Construction . . .</h3>
       <h4 class="has-text-light is-size-5"><em>ometepeartandeducation@gmail.com</em></h4>
     </div>
-    <footer class="footer has-text-centered has-background-info-light">
+    <footer class="footer has-text-centered is-white">
       <h4 class="is-size-5"><span>&copy</span> Ometepe Art & Education 2021</h4>
     <footer/>
     <script src="js/index.js"></script>
