Adding font size changes for mobile

--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
         </div>
     </nav>
     <div class="section has-text-centered">
-      <h1 class="is-size-1 has-text-light has-text-weight-light title">Ometepe Art and Education</h1>
-      <h2 class=" is-italic is-size-4 has-text-weight-light has-text-light subtitle">Adding Our Voices to a Beautifully Diverse World</h2>
+      <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title">Ometepe Art and Education</h1>
+      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Adding Our Voices to a Beautifully Diverse World</h2>
 
-      <h3 class="has-text-light is-size-3">Art Lessons & Dance Lessons</h3>
-      <h3 class="has-text-light is-size-3">Celebrating Central American Culture</h3>
+      <h3 class="has-text-light is-size-3 is-size-5-mobile">Art Lessons & Dance Lessons</h3>
+      <h3 class="has-text-light is-size-3 is-size-5-mobile">Celebrating Central American Culture</h3>
     </div>
 
     <div class="container is-centered-flexy">
       <figure class="image">
         <img src="images/machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
-      <h3 class="has-text-light is-size-4 py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
+      <h3 class="has-text-light is-size-4 is-size-5-mobile py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
       <figure class="image">
         <img class="pb-6" src="images/houses.jpg" alt="Houses in Chinandega" />
       </figure>
