Apply fix Navbar, add dropshadow to images

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>OmetepArt&Education</title>
   </head>
-  <body>
-    <nav class="navbar has-shadow is-white">
+  <body class="has-navbar-fixed-top">
+    <nav class="navbar has-shadow is-white is-fixed-top">
       <div class="navbar-brand pl-4">
         <a href="#" class="navbar-item is-size-2">
           <span class="icon-text">
@@ -57,14 +57,14 @@
     </div>
 
     <div class="container is-centered-flexy">
-      <figure class="image">
+      <figure class="image block">
         <img src="images/machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
       <h3 class="has-text-light is-size-4 is-size-5-mobile py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
-      <figure class="image">
-        <img class="pb-6" src="images/houses.jpg" alt="Houses in Chinandega" />
+      <figure class="image block">
+        <img src="images/houses.jpg" alt="Houses in Chinandega" />
       </figure>
-      <figure class="image"><img src="images/linda.jpg" alt="A Beautiful Little Girl" /></figure>
+      <figure class="image block"><img src="images/linda.jpg" alt="A Beautiful Little Girl" /></figure>
     </div>
     <div class="section has-text-centered">
       <h3 class="has-text-light is-size-3">Website Under Construction . . .</h3>
