--- a/index.html
+++ b/index.html
@@ -51,21 +51,32 @@
     <div class="section has-text-centered">
       <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title">Ometepe Art and Education</h1>
       <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Adding Our Voices to a Beautifully Diverse World</h2>
-
-      <h3 class="has-text-light is-size-3 is-size-5-mobile">Art Lessons & Dance Lessons</h3>
-      <h3 class="has-text-light is-size-3 is-size-5-mobile">Celebrating Central American Culture</h3>
     </div>
 
-    <div class="container is-centered-flexy">
-      <figure class="image block">
-        <img src="images/machoraton.jpg" alt="Painting of Nicaraguan Dancers" />
+   <div class="columns is-centered has-text-centered">
+      <div class="column is-two-fifths">
+        <h3 class="has-text-light is-size-3 is-size-5-mobile block">Art Lessons & Dance Lessons</h3>
+      <figure class="is-flex is-justify-content-center block">
+        <img class="image" src="images/houses.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
+      <figure class="is-flex is-justify-content-center">
+        <img class="image my-5" src="images/machoraton.jpg" alt="A Beautiful Little Girl" />
+      </figure>
+    </div>
+    <div class="column has-text-centered is-two-fifths">
+     <h3 class="has-text-light is-size-3 is-size-5-mobile block">Celebrating Central American Culture</h3>
+     <figure class="is-flex is-justify-content-center block">
+       <img class="image" src="images/linda.jpg" alt="Houses in Chinandega" />
+    </figure>
+     <figure class="is-flex is-justify-content-center">
+       <img class="image my-5" src="images/doll.jpg" alt="Nicaragua Doll" />
+    </figure>
+   </div>
+  </div>
+
+    <div class="block">
       <h3 class="has-text-light is-size-4 is-size-5-mobile py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
-      <figure class="image block">
-        <img src="images/houses.jpg" alt="Houses in Chinandega" />
-      </figure>
-      <figure class="image block"><img src="images/linda.jpg" alt="A Beautiful Little Girl" /></figure>
-    </div>
+      </div>
     <div class="section has-text-centered">
       <h3 class="has-text-light is-size-3">Website Under Construction . . .</h3>
       <h4 class="has-text-light is-size-5"><em>ometepeartandeducation@gmail.com</em></h4>
