--- a/index.html
+++ b/index.html
@@ -64,28 +64,40 @@
         <img class="image my-5" src="images/machoraton.jpg" alt="A Beautiful Little Girl" />
       </figure>
     </div>
-    <div class="column has-text-centered is-two-fifths">
+    <div class="column is-two-fifths">
      <h3 class="has-text-light is-size-3 is-size-5-mobile block mb-6">Celebrating Central American Culture</h3>
      <figure class="is-flex is-justify-content-center block">
        <img class="image" src="images/linda.jpg" alt="Houses in Chinandega" />
     </figure>
      <figure class="is-flex is-justify-content-center">
-       <img class="image my-5" src="images/doll.jpg" alt="Nicaragua Doll" />
+       <img class="image my-5" src="images/linda-dress.jpg" alt="Nicaragua Doll" />
     </figure>
    </div>
  </div>
 </section> 
 
-    <div class="block">
-      <h3 class="has-text-light is-size-4 is-size-5-mobile py-6 has-text-centered">Information Coming Soon - in both English & Spanish &hearts;</h3>
-    </div>
+ <div class="block">
+   <h3 class="has-text-light is-size-4 is-size-5-mobile py-6 has-text-centered">Information Coming Soon - in both  English & Spanish &hearts;</h3>
+   </div>
     <div class="section has-text-centered">
       <h3 class="has-text-light is-size-3">Website Under Construction . . .</h3>
-      <h4 class="has-text-light is-size-5"><em>ometepeartandeducation@gmail.com</em></h4>
+      <h3 class="has-text-light is-size-5"><a class="has-text-white" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
     </div>
-    <footer class="footer has-text-centered is-white">
-      <h4 class="is-size-5"><span>&copy</span> Ometepe Art & Education 2021</h4>
-    <footer/>
+    
+  <footer class="footer has-text-centered is-white">
+     <h4 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
+  <div class="mt-5">
+  <figure>
+    <a href="https://bulma.io">
+    <img
+    src="images/made-with-bulma.png"
+    alt="Made with Bulma"
+    width="128"
+    height="24">
+    </a>
+  </figure>
+</div>
+<footer/>
     <script src="js/index.js"></script>
   </body>
 </html>
