Change aspect ratio of figure/images using bulma

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
    <div class="columns is-centered has-text-centered">
       <div class="column is-two-fifths">
         <h3 class="has-text-light is-size-3 is-size-5-mobile block mb-6">Art Lessons & Dance Lessons</h3>
-      <figure class="is-flex is-justify-content-center block">
-        <img class="image" src="images/houses.jpg" alt="Painting of Nicaraguan Dancers" />
+      <figure class="is-flex is-justify-content-center block image is-4x3">
+        <img src="images/houses.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
-      <figure class="is-flex is-justify-content-center">
-        <img class="image my-5" src="images/machoraton.jpg" alt="A Beautiful Little Girl" />
+      <figure class="is-flex is-justify-content-center image is-4x3">
+        <img src="images/machoraton.jpg" alt="A Beautiful Little Girl" />
       </figure>
     </div>
     <div class="column is-two-fifths">
      <h3 class="has-text-light is-size-3 is-size-5-mobile block mb-6">Celebrating Central American Culture</h3>
-     <figure class="is-flex is-justify-content-center block">
-       <img class="image" src="images/linda.jpg" alt="Houses in Chinandega" />
+     <figure class="is-flex is-justify-content-center block image is-4x3">
+       <img src="images/linda.jpg" alt="Houses in Chinandega" />
     </figure>
-     <figure class="is-flex is-justify-content-center">
-       <img class="image my-5" src="images/linda-dress.jpg" alt="Nicaragua Doll" />
+     <figure class="is-flex is-justify-content-center image is-4x3">
+       <img src="images/linda-dress.jpg" alt="Nicaragua Doll" />
     </figure>
    </div>
  </div>
