--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <section>
    <div class="columns is-centered has-text-centered is-variable is-7">
       <div class="column is-two-fifths">
-        <h3 class="has-text-light is-size-3-desktop is-size-5-mobile is-size-5-tablet block mb-6">Art Lessons & Dance Lessons</h3>
+        <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block my-6">Art Lessons & Dance Lessons</h3>
       <figure class="is-flex is-justify-content-center block image is-4x3">
         <img src="images/houses.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
@@ -65,7 +65,7 @@
       </figure>
     </div>
     <div class="column is-two-fifths">
-     <h3 class="has-text-light is-size-3-desktop is-size-5-mobile is-size-5-tablet block mb-6">Celebrating Central American Culture</h3>
+     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block my-6">Celebrating Nicaraguan Culture</h3>
      <figure class="is-flex is-justify-content-center block image is-4x3">
        <img src="images/linda.jpg" alt="Houses in Chinandega" />
     </figure>
