--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Adding Our Voices to a Beautifully Diverse World</h2>
     </div>
   
-<section>
+<section class="section">
    <div class="columns is-centered has-text-centered is-variable is-7">
       <div class="column is-two-fifths">
-        <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block my-6">Art Lessons & Dance Lessons</h3>
+        <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Art Lessons & Dance Lessons</h3>
       <figure class="is-flex is-justify-content-center block image is-4x3">
         <img src="images/houses.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
@@ -65,7 +65,7 @@
       </figure>
     </div>
     <div class="column is-two-fifths">
-     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block my-6">Celebrating Nicaraguan Culture</h3>
+     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Celebrating Nicaraguan Culture</h3>
      <figure class="is-flex is-justify-content-center block image is-4x3">
        <img src="images/linda.jpg" alt="Houses in Chinandega" />
     </figure>
@@ -75,12 +75,32 @@
    </div>
  </div>
 </section> 
+<section class="hero is-large">
+  <div class="hero-body">
+<!-- This is where I will put in some content -->
+      <!-- And more content here -->
+    </p>
+  </div>
+</section>
+
+<div class="columns section is-centered">
+  <div class="column is-two-thirds">
+  <article class="message is-dark is-medium">
+    <div class="message-header">
+      <p>Our Mission</p>
+    </div>
+    <div class="message-body">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+    </div>
+  </article>
+  </div>
+</div>
+
 
  <div class="block">
    <h3 class="has-text-light is-size-4 is-size-5-mobile py-6 has-text-centered">Information Coming Soon - in both  English & Spanish &hearts;</h3>
    </div>
     <div class="section has-text-centered">
-      <h3 class="has-text-light is-size-3">Website Under Construction . . .</h3>
       <h3 class="has-text-light is-size-5"><a class="has-text-white" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
     </div>
     
