Add dropdown to artists menu item, fix position hero

--- a/index.html
+++ b/index.html
@@ -38,8 +38,15 @@
       </div>
         <div class="navbar-menu mr-5" id="nav-links">
           <div class="navbar-end is-size-5">
-            <a href="#" class="navbar-item">Our Mission</a>
-            <a href="#" class="navbar-item">Artists</a>
+            <a href="#mission" class="navbar-item">Our Mission</a>
+            <div class="navbar-item has-dropdown is-hoverable">
+              <a href="" class="navbar-link is-arrowless ">Artists</a>
+              <div class="navbar-dropdown">
+                <a href="" class="navbar-item">Inmaculada Cruz</a>
+                <hr class="navbar-divider">
+                <a href="" class="navbar-item">Victor Fuentes</a>
+              </div>
+            </div>
             <a href="#" class="navbar-item">Staff</a>
             <a href="#" class="navbar-item">Location</a>
             <a href="#" class="navbar-item">Events</a>
@@ -75,37 +82,31 @@
    </div>
  </div>
 </section> 
-<section class="hero is-large">
+<section class="hero is-large" id="ometepe">
   <div class="hero-body">
 <!-- This is where I will put in some content -->
       <!-- And more content here -->
-    </p>
   </div>
 </section>
 
 <div class="columns section is-centered">
   <div class="column is-two-thirds">
-  <article class="message is-dark is-medium">
+  <article class="message is-dark is-large" id="mission">
     <div class="message-header">
       <p>Our Mission</p>
     </div>
-    <div class="message-body">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-    </div>
+    <div class="message-body"><p>To share, with as wide an audience as possible, the traditional dance and musical culture unique to our beautiful Central American country. We also wish to expose as many people as possible to our visual arts.</p></div>
   </article>
   </div>
 </div>
 
 
- <div class="block">
-   <h3 class="has-text-light is-size-4 is-size-5-mobile py-6 has-text-centered">Information Coming Soon - in both  English & Spanish &hearts;</h3>
-   </div>
-    <div class="section has-text-centered">
-      <h3 class="has-text-light is-size-5"><a class="has-text-white" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
-    </div>
     
   <footer class="footer has-text-centered is-white">
      <h4 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
+    <div class="block has-text-centered my-6">
+      <h3 class="is-italic is-size-4"><a class="has-text-dark" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
+    </div>
       <div class="mt-5">
       <figure>
         <a href="https://bulma.io">
