--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
       <div class="column is-two-fifths">
         <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Art Lessons & Dance Lessons</h3>
       <figure class="is-flex is-justify-content-center block image is-4x3">
-        <img src="images/houses.jpg" alt="Painting of Nicaraguan Dancers" />
+        <img class="shadow" src="images/houses.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
       <figure class="is-flex is-justify-content-center image is-4x3">
-        <img src="images/machoraton.jpg" alt="A Beautiful Little Girl" />
+        <img class="shadow" src="images/machoraton.jpg" alt="A Beautiful Little Girl" />
       </figure>
     </div>
     <div class="column is-two-fifths">
      <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Celebrating Nicaraguan Culture</h3>
      <figure class="is-flex is-justify-content-center block image is-4x3">
-       <img src="images/linda.jpg" alt="Houses in Chinandega" />
+       <img class="shadow" src="images/linda.jpg" alt="Houses in Chinandega" />
     </figure>
      <figure class="is-flex is-justify-content-center image is-4x3">
-       <img src="images/linda-dress.jpg" alt="Nicaragua Doll" />
+       <img class="shadow" src="images/linda-dress.jpg" alt="Nicaragua Doll" />
     </figure>
    </div>
  </div>
@@ -95,7 +95,7 @@
     <div class="message-header">
       <p>Our Mission</p>
     </div>
-    <div class="message-body"><p>To share, with as wide an audience as possible, the traditional dance and musical culture unique to our beautiful Central American country. We also wish to expose as many people as possible to our visual arts.</p></div>
+    <div class="message-body"><p class="is-size-6-mobile">To share, with as wide an audience as possible, the traditional dance and musical culture unique to our beautiful Central American country. We also wish to expose as many people as possible to our visual arts.</p></div>
   </article>
   </div>
 </div>
