Hide hero for mobile, change font-size for email mobile

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
    </div>
  </div>
 </section> 
-<section class="hero is-large" id="ometepe">
+<section class="hero is-large is-hidden-mobile" id="ometepe">
   <div class="hero-body">
 <!-- This is where I will put in some content -->
       <!-- And more content here -->
@@ -105,7 +105,7 @@
   <footer class="footer has-text-centered is-white">
      <h4 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
     <div class="block has-text-centered my-6">
-      <h3 class="is-italic is-size-4"><a class="has-text-dark" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
+      <h3 class="is-italic is-size-4 is-size-5-mobile"><a class="has-text-dark" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
     </div>
       <div class="mt-5">
       <figure>
