Change photos to match aspect ratio, added top margin to title

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </nav>
     <div class="section has-text-centered">
-      <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title">Ometepe Art and Education</h1>
+      <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Ometepe Art and Education</h1>
       <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Adding Our Voices to a Beautifully Diverse World</h2>
     </div>
   
@@ -65,19 +65,19 @@
       <div class="column is-two-fifths">
         <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Art Lessons & Dance Lessons</h3>
       <figure class="is-flex is-justify-content-center block image is-4x3">
-        <img class="shadow" src="images/houses.jpg" alt="Painting of Nicaraguan Dancers" />
+        <img class="shadow" src="images/linda.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
       <figure class="is-flex is-justify-content-center image is-4x3">
-        <img class="shadow" src="images/machoraton.jpg" alt="A Beautiful Little Girl" />
+        <img class="shadow" src="images/linda-dress.jpg" alt="A Beautiful Little Girl" />
       </figure>
     </div>
     <div class="column is-two-fifths">
      <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Celebrating Nicaraguan Culture</h3>
      <figure class="is-flex is-justify-content-center block image is-4x3">
-       <img class="shadow" src="images/linda.jpg" alt="Houses in Chinandega" />
+       <img class="shadow" src="images/dollsgrey.jpg" alt="Houses in Chinandega" />
     </figure>
      <figure class="is-flex is-justify-content-center image is-4x3">
-       <img class="shadow" src="images/linda-dress.jpg" alt="Nicaragua Doll" />
+       <img class="shadow" src="images/artgallery.jpg" alt="Nicaragua Doll" />
     </figure>
    </div>
  </div>
@@ -91,7 +91,7 @@
 
 <div class="columns section is-centered pb-1">
   <div class="column is-two-thirds">
-  <article class="message is-dark is-large" id="mission">
+  <article class="message is-dark is-medium" id="mission">
     <div class="message-header">
       <p>Our Mission</p>
     </div>
