--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
    </div>
  </div>
 </section> 
+
+<div class="columns section is-centered has-text-centered mb-5">
+  <div class="column is-two-fifths">
+     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Nicaraguan Cooking Lessons</h3>
+     <figure class="is-flex is-justify-content-center block image is-4x3">
+       <img class="shadow" src="images/fritanga.jpg" alt="Houses in Chinandega" />
+    </figure>
+  </div>
+</div>
+
 <section class="hero is-large is-hidden-mobile" id="ometepe">
   <div class="hero-body">
 <!-- This is where I will put in some content -->
@@ -95,7 +105,7 @@
     <div class="message-header">
       <p>Our Mission</p>
     </div>
-    <div class="message-body"><p class="is-size-6-mobile">To share, with as wide an audience as possible, the traditional dance and musical culture unique to our beautiful Central American country. We also wish to expose as many people as possible to our visual arts.</p></div>
+    <div class="message-body"><p class="is-size-6-mobile">To share, with as wide an audience as possible, the traditional dance, musical culture and culinary dishes unique to our beautiful Central American country. We also wish to expose as many people as possible to our visual arts.</p></div>
   </article>
   </div>
 </div>
@@ -108,21 +118,24 @@
     <div class="modal-background" id="modal-bg-1"></div>
     <div class="modal-content has-background-white py-5 px-5">
       <h3 class="title mb-6">Our Mailing List</h3>
-      <form netlify>
+      <form name="contact" method="POST" data-netlify="true">
         <!-- Regular text input below -->
         <div class="field">
           <label class="label">Name</label>
           <!-- Always use class of control for inputs like this from users -->
           <!-- And surround it in a div with that class -->
           <div class="control">
-            <input type="text" class="input" placeholder="Name">
+            <input type="text" class="input" name="name" placeholder="Name">
           </div>
         </div>
         <div class="field">
           <label class="label">Email</label>
           <div class="control">
-            <input type="text" class="input" placeholder="Email">
+            <input type="email" class="input" name="email" placeholder="Email">
           </div>
+              <div class="mt-6 has-text-centered">
+            <button class="button" type="submit" id="send-email">Send</button>
+          </div>    
         </div>
       </form>
     </div>
