Add social media links/icons to footer

--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
     
   <footer class="footer has-text-centered is-white">
      <h4 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
+    <div class="block pt-4">
+      <span class="icon">
+       <a href="http://facebook.com"target="_blank"> <i class="fab fa-facebook-square fa-2x has-text-grey" ></i></a>
+        <a href="http://instagram.com"target="_blank"><i class="fab fa-instagram-square fa-2x pl-3 has-text-grey" target="_blank"></i></a>
+      </span>
+    </div>
     <div class="block has-text-centered my-6">
       <h3 class="is-italic is-size-4 is-size-5-mobile"><a class="has-text-dark" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
     </div>
