--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Arapey&family=Patua+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>OmetepArt&Education</title>
   </head>
   <body class="has-navbar-fixed-top">
@@ -27,7 +27,7 @@
           <span class="icon">
             <i class="fas fa-palette"></i>
         </span>
-          <span class="is-size-5 pl-4">Nicaraguan Art</span>
+          <span class="is-size-5 pl-4">Arte Nicaragüense</span>
          </span>
         <a/>
         <a class="navbar-burger" id="burger">
@@ -38,46 +38,46 @@
       </div>
         <div class="navbar-menu mr-5" id="nav-links">
           <div class="navbar-end is-size-5">
-            <a href="#mission" class="navbar-item">Our Mission</a>
+            <a href="#mission" class="navbar-item">Nuestra misión</a>
             <div class="navbar-item has-dropdown is-hoverable">
-              <a href="" class="navbar-link is-arrowless ">Artists</a>
+              <a href="" class="navbar-link is-arrowless ">Artistas</a>
               <div class="navbar-dropdown">
                 <a href="" class="navbar-item">Inmaculada Cruz</a>
                 <hr class="navbar-divider">
                 <a href="" class="navbar-item">Victor Fuentes</a>
               </div>
             </div>
-            <a href="#" class="navbar-item">Staff</a>
-            <a href="#" class="navbar-item">Location</a>
-            <a href="#" class="navbar-item">Events</a>
-            <a href="#" class="navbar-item">Contact</a>
-            <a href="./spanish/index-es.html" class="navbar-item">En Español</a>
+            <a href="#" class="navbar-item">Personal</a>
+            <a href="#" class="navbar-item">Localización</a>
+            <a href="#" class="navbar-item">Eventos</a>
+            <a href="#" class="navbar-item">Contactar</a>
+            <a href="../index.html" class="navbar-item">En Inglés</a>
           </div>
         </div>
     </nav>
     <div class="section has-text-centered">
       <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Ometepe Art and Education</h1>
-      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Adding Our Voices to a Beautifully Diverse World</h2>
+      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Añadiendo nuestras voces a un mundo maravillosamente diverso</h2>
     </div>
   
 <section class="section">
    <div class="columns is-centered has-text-centered is-variable is-7">
       <div class="column is-two-fifths">
-        <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Art Lessons & Dance Lessons</h3>
+        <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Lecciones de arte y clases de baile</h3>
       <figure class="is-flex is-justify-content-center block image is-4x3">
-        <img class="shadow" src="images/linda.jpg" alt="Painting of Nicaraguan Dancers" />
+        <img class="shadow" src="../images/linda.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
       <figure class="is-flex is-justify-content-center image is-4x3">
-        <img class="shadow" src="images/linda-dress.jpg" alt="A Beautiful Little Girl" />
+        <img class="shadow" src="../images/linda-dress.jpg" alt="A Beautiful Little Girl" />
       </figure>
     </div>
     <div class="column is-two-fifths">
-     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Celebrating Nicaraguan Culture</h3>
+     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Celebrando la cultura nicaragüense</h3>
      <figure class="is-flex is-justify-content-center block image is-4x3">
-       <img class="shadow" src="images/dollsgrey.jpg" alt="Houses in Chinandega" />
+       <img class="shadow" src="../images/dollsgrey.jpg" alt="Houses in Chinandega" />
     </figure>
      <figure class="is-flex is-justify-content-center image is-4x3">
-       <img class="shadow" src="images/artgallery.jpg" alt="Nicaragua Doll" />
+       <img class="shadow" src="../images/artgallery.jpg" alt="Nicaragua Doll" />
     </figure>
    </div>
  </div>
@@ -85,9 +85,9 @@
 
 <div class="columns section is-centered has-text-centered mb-5">
   <div class="column is-two-fifths">
-     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Nicaraguan Cooking Lessons</h3>
+     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Clases de cocina nicaragüense</h3>
      <figure class="is-flex is-justify-content-center block image is-4x3">
-       <img class="shadow" src="images/fritanga.jpg" alt="Houses in Chinandega" />
+       <img class="shadow" src="../images/fritanga.jpg" alt="Houses in Chinandega" />
     </figure>
   </div>
 </div>
@@ -103,25 +103,25 @@
   <div class="column is-two-thirds">
   <article class="message is-dark is-medium" id="mission">
     <div class="message-header">
-      <p>Our Mission</p>
+      <p>Nuestra misión</p>
     </div>
-    <div class="message-body"><p class="is-size-6-mobile">To share, with as wide an audience as possible, the traditional dance, musical culture and culinary dishes unique to our beautiful Central American country. We also wish to expose as many people as possible to our visual arts.</p></div>
+    <div class="message-body"><p class="is-size-6-mobile">Compartir, con la mayor audiencia posible, la danza tradicional, la cultura musical y los platos culinarios únicos de nuestro hermoso país centroamericano. También deseamos exponer a tantas personas como sea posible a nuestras artes visuales.</p></div>
   </article>
   </div>
 </div>
 <div class="has-text-centered mb-4 pb-6">
-     <button class="button mt-5" id="signup">Sign Up for our Newsletter</button>
+     <button class="button mt-5" id="signup">Suscríbase a nuestro Newsletter</button>
 </div>
   <!-- Modal -->
 
   <div class="modal" id="modal-1">
     <div class="modal-background" id="modal-bg-1"></div>
     <div class="modal-content has-background-white py-5 px-5">
-      <h3 class="title mb-6">Our Mailing List</h3>
+      <h3 class="title mb-6">Nuestra lista de correo</h3>
       <form name="contact" method="POST" data-netlify="true">
         <!-- Regular text input below -->
         <div class="field">
-          <label class="label">Name</label>
+          <label class="label">Nombre</label>
           <!-- Always use class of control for inputs like this from users -->
           <!-- And surround it in a div with that class -->
           <div class="control">
@@ -129,12 +129,12 @@
           </div>
         </div>
         <div class="field">
-          <label class="label">Email</label>
+          <label class="label">Correo electrónico</label>
           <div class="control">
             <input type="email" class="input" name="email" placeholder="Email">
           </div>
               <div class="mt-6 has-text-centered">
-            <button class="button" type="submit" id="send-email">Send</button>
+            <button class="button" type="submit" id="send-email">Enviar</button>
           </div>    
         </div>
       </form>
@@ -157,7 +157,7 @@
       <figure>
         <a href="https://bulma.io">
         <img
-        src="images/made-with-bulma.png"
+        src="../images/made-with-bulma.png"
         alt="Made with Bulma"
         width="128"
         height="24">
@@ -165,6 +165,6 @@
       </figure>
     </div>
     <footer/>
-    <script src="js/index.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
