Change spanish mission content per customer request

--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -105,7 +105,7 @@
     <div class="message-header">
       <p>Nuestra misión</p>
     </div>
-    <div class="message-body"><p class="is-size-6-mobile">Compartir, con la mayor audiencia posible, la danza tradicional, la cultura musical y los platos culinarios únicos de nuestro hermoso país centroamericano. También deseamos exponer a tantas personas como sea posible a nuestras artes visuales.</p></div>
+    <div class="message-body"><p class="is-size-6-mobile">La misión de nuestra organizacíon es compartir y dar a conocer nuestra cultura destacando la danza folklorica, arte visual, historia de la música y lengua de nuestro hermoso país Nicaragua de America Central a traves de la conexión y participacion de nuestra communidad en el Noroeste.</p></div>
   </article>
   </div>
 </div>
