--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -42,9 +42,9 @@
             <div class="navbar-item has-dropdown is-hoverable">
               <a href="" class="navbar-link is-arrowless ">Artistas</a>
               <div class="navbar-dropdown">
-                <a href="" class="navbar-item">Inmaculada Cruz</a>
+                <a href="" class="navbar-item is-size-6">Victor Fuentes</a>
                 <hr class="navbar-divider">
-                <a href="" class="navbar-item">Victor Fuentes</a>
+                <a href="" class="navbar-item is-size-6">Inmaculada Cruz</a>
               </div>
             </div>
             <a href="#" class="navbar-item">Personal</a>
@@ -143,7 +143,7 @@
   <!-- End Modal -->
     
   <footer class="footer has-text-centered is-white">
-     <h4 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
+     <h2 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h4>
     <div class="block pt-4">
       <span class="icon">
        <a href="http://facebook.com"target="_blank"> <i class="fab fa-facebook-square fa-2x has-text-grey" ></i></a>
