Create structure, make files for rest of pages

--- a/pages/inmaculada_cruz.html
+++ b/pages/inmaculada_cruz.html
@@ -16,13 +16,13 @@
       href="https://fonts.googleapis.com/css2?family=Arapey&family=Patua+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>OmetepArt&Education</title>
   </head>
   <body class="has-navbar-fixed-top">
     <nav class="navbar has-shadow is-white is-fixed-top">
       <div class="navbar-brand pl-4">
-        <a href="#" class="navbar-item is-size-2">
+        <a href="../index.html#" class="navbar-item is-size-2">
           <span class="icon-text">
           <span class="icon">
             <i class="fas fa-palette"></i>
@@ -38,80 +38,32 @@
       </div>
         <div class="navbar-menu mr-5" id="nav-links">
           <div class="navbar-end is-size-5">
-            <a href="#mission" class="navbar-item">Our Mission</a>
+            <a href="../index.html#mission" class="navbar-item">Our Mission</a>
             <div class="navbar-item has-dropdown is-hoverable">
               <a href="" class="navbar-link is-arrowless ">Artists</a>
               <div class="navbar-dropdown">
-                <a href="./pages/victor_fuentes.html" class="navbar-item is-size-6">Victor Fuentes</a>
+                <a href="victor_fuentes.html" class="navbar-item is-size-6">Victor Fuentes</a>
                 <hr class="navbar-divider">
-                <a href="./pages/inmaculada_cruz.html" class="navbar-item is-size-6">Inmaculada Cruz</a>
+                <a href="inmaculada_cruz.html" class="navbar-item is-size-6">Inmaculada Cruz</a>
               </div>
             </div>
-            <a href="./pages/staff.html" class="navbar-item">Staff</a>
-            <a href="./pages/location.html" class="navbar-item">Location</a>
-            <a href="./pages/events.html" class="navbar-item">Events</a>
-            <a href="./pages/contact.html" class="navbar-item">Contact</a>
-            <a href="./spanish/index-es.html" class="navbar-item">En Español</a>
+            <a href="./staff.html" class="navbar-item">Staff</a>
+            <a href="./location.html" class="navbar-item">Location</a>
+            <a href="./events.html" class="navbar-item">Events</a>
+            <a href="./contact.html" class="navbar-item">Contact</a>
+            <a href="../spanish/index-es.html" class="navbar-item">En Español</a>
           </div>
         </div>
     </nav>
     <div class="section has-text-centered">
-      <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Ometepe Art and Education</h1>
-      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Adding Our Voices to a Beautifully Diverse World</h2>
+      <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Inmaculada Cruz</h1>
+      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Painter and Chef</h2>
     </div>
   
 <section class="section">
-   <div class="columns is-centered has-text-centered is-variable is-7">
-      <div class="column is-two-fifths">
-        <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Art Lessons & Dance Lessons</h3>
-      <figure class="is-flex is-justify-content-center block image is-4x3">
-        <img class="shadow" src="images/linda.jpg" alt="Painting of Nicaraguan Dancers" />
-      </figure>
-      <figure class="is-flex is-justify-content-center image is-4x3">
-        <img class="shadow" src="images/linda-dress.jpg" alt="A Beautiful Little Girl" />
-      </figure>
-    </div>
-    <div class="column is-two-fifths">
-     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Celebrating Nicaraguan Culture</h3>
-     <figure class="is-flex is-justify-content-center block image is-4x3">
-       <img class="shadow" src="images/dollsgrey.jpg" alt="Houses in Chinandega" />
-    </figure>
-     <figure class="is-flex is-justify-content-center image is-4x3">
-       <img class="shadow" src="images/artgallery.jpg" alt="Nicaragua Doll" />
-    </figure>
-   </div>
- </div>
 </section> 
 
-<div class="columns section is-centered has-text-centered mb-5">
-  <div class="column is-two-fifths">
-     <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Nicaraguan Cooking Lessons</h3>
-     <figure class="is-flex is-justify-content-center block image is-4x3">
-       <img class="shadow" src="images/fritanga.jpg" alt="Houses in Chinandega" />
-    </figure>
-  </div>
-</div>
 
-<section class="hero is-large is-hidden-mobile" id="ometepe">
-  <div class="hero-body">
-<!-- This is where I will put in some content -->
-      <!-- And more content here -->
-  </div>
-</section>
-
-<div class="columns section is-centered pb-1">
-  <div class="column is-two-thirds">
-  <article class="message is-dark is-medium" id="mission">
-    <div class="message-header">
-      <p>Our Mission</p>
-    </div>
-    <div class="message-body"><p class="is-size-6-mobile">To share, with as wide an audience as possible, the traditional dance, musical culture and culinary dishes unique to our beautiful Central American country. We also wish to expose as many people as possible to our visual arts.</p></div>
-  </article>
-  </div>
-</div>
-<div class="has-text-centered mb-4 pb-6">
-     <button class="button mt-5" id="signup">Sign Up for our Newsletter</button>
-</div>
   <!-- Modal -->
 
   <div class="modal" id="modal-1">
@@ -157,7 +109,7 @@
       <figure>
         <a href="https://bulma.io">
         <img
-        src="images/made-with-bulma.png"
+        src="../images/made-with-bulma.png"
         alt="Made with Bulma"
         width="128"
         height="24">
@@ -168,3 +120,5 @@
     <script src="js/index.js"></script>
   </body>
 </html>
+
+
