Build out page for Victor Fuentes

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
   </div>
 </section>
 
+<div class="box"></div>
+
 <div class="columns section is-centered pb-1">
   <div class="column is-two-thirds">
   <article class="message is-dark is-medium" id="mission">
