--- a/pages/victor_fuentes.html
+++ b/pages/victor_fuentes.html
@@ -59,9 +59,37 @@
       <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Victor Fuentes</h1>
       <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Painter and Poet</h2>
     </div>
+    <div class="columns is-centered has-text-centered section">
+      <div class="column is-four-fifths">
+        <figure is-flex is-justify-content-center>
+          <img class="shadow" src="../images/victor-portrait.jpg" alt="Victor Fuentes, painter" />
+        </figure>
+        <div class="section">
+        <article class="message is-dark is-medium" id="mission">
+          <div class="message-header">
+            <p>Artist's Statement</p>
+          </div>
+          <div class="message-body"><p class="is-size-6-mobile has-text-justified">The intention of my painting is to project Latin-American art and culture through themes from my Latin roots. In this context, the goal of my work is to transmit my knowledge, my sensibility and my love of art to the different cultures in Washington State. In this sense, the visual arts has been my greatests connection with the Pacific Northwest. Here, the various cultures allow me to learn from them and thereby enrich my artwork - liberating my brush toward new expressions and colors. I believe art lives within each one of us and this life force seeks a universe of forms and colors that enrich humanity and touch the spirit.</p></div>
+        </article>
+        </div>
+      </div>
+    </div>
+    
+
+    </div>
+    <section class="hero is-medium is-hidden-mobile section" id="horses">
+      <div class="hero-body">
+
+      </div>
+    </section> 
+
+    <div class="box is-marginless"></div>
   
-<section class="section">
-</section> 
+    <section class="hero is-large is-hidden-mobile" id="cuadros">
+      <div class="hero-body">
+
+      </div>
+    </section> 
 
 
 
@@ -118,7 +146,7 @@
       </figure>
     </div>
     <footer/>
-    <script src="js/index.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
 
