Style Victor Fuentes page

--- a/pages/victor_fuentes.html
+++ b/pages/victor_fuentes.html
@@ -57,7 +57,7 @@
     </nav>
     <div class="section has-text-centered">
       <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Victor Fuentes</h1>
-      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Painter and Poet</h2>
+      <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle mb-0">Painter and Poet</h2>
     </div>
     <div class="columns is-centered has-text-centered section">
       <div class="column is-four-fifths">
@@ -77,15 +77,14 @@
     
 
     </div>
-    <section class="hero is-medium is-hidden-mobile section" id="horses">
+    <section class="hero is-medium is-hidden-mobile section mb-5" id="horses">
       <div class="hero-body">
 
       </div>
     </section> 
 
-    <div class="box is-marginless"></div>
   
-    <section class="hero is-large is-hidden-mobile" id="cuadros">
+    <section class="hero is-medium is-hidden-mobile section mb-6" id="cuadros">
       <div class="hero-body">
 
       </div>
