Figure out photo aspect ratios

--- a/pages/victor_fuentes.html
+++ b/pages/victor_fuentes.html
@@ -61,8 +61,8 @@
     </div>
     <div class="columns is-centered has-text-centered section">
       <div class="column is-four-fifths">
-        <figure is-flex is-justify-content-center>
-          <img class="shadow" src="../images/victor-portrait.jpg" alt="Victor Fuentes, painter" />
+        <figure class="image is-16by9">
+          <img src="../images/victor-portrait.jpg" alt="Victor Fuentes, painter" />
         </figure>
         <div class="section">
         <article class="message is-dark is-medium" id="mission">
