--- a/spanish/index-es.html
+++ b/spanish/index-es.html
@@ -64,19 +64,19 @@
    <div class="columns is-centered has-text-centered is-variable is-7">
       <div class="column is-two-fifths">
         <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Lecciones de arte y clases de baile</h3>
-      <figure class="is-flex is-justify-content-center block image is-4x3">
+      <figure class="is-flex is-justify-content-center block image is-4by3">
         <img class="shadow" src="../images/linda.jpg" alt="Painting of Nicaraguan Dancers" />
       </figure>
-      <figure class="is-flex is-justify-content-center image is-4x3">
+      <figure class="is-flex is-justify-content-center image is-4by3">
         <img class="shadow" src="../images/linda-dress.jpg" alt="A Beautiful Little Girl" />
       </figure>
     </div>
     <div class="column is-two-fifths">
      <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Celebrando la cultura nicaragüense</h3>
-     <figure class="is-flex is-justify-content-center block image is-4x3">
+     <figure class="is-flex is-justify-content-center block image is-4by3">
        <img class="shadow" src="../images/dollsgrey.jpg" alt="Houses in Chinandega" />
     </figure>
-     <figure class="is-flex is-justify-content-center image is-4x3">
+     <figure class="is-flex is-justify-content-center image is-4by3">
        <img class="shadow" src="../images/artgallery.jpg" alt="Nicaragua Doll" />
     </figure>
    </div>
@@ -86,7 +86,7 @@
 <div class="columns section is-centered has-text-centered mb-5">
   <div class="column is-two-fifths">
      <h3 class="has-text-light is-size-4-desktop is-size-5-mobile is-size-5-tablet block mb-6">Clases de cocina nicaragüense</h3>
-     <figure class="is-flex is-justify-content-center block image is-4x3">
+     <figure class="is-flex is-justify-content-center block image is-4by3">
        <img class="shadow" src="../images/fritanga.jpg" alt="Houses in Chinandega" />
     </figure>
   </div>
