Fix top padding Victor Fuentes photo

--- a/pages/victor_fuentes.html
+++ b/pages/victor_fuentes.html
@@ -59,10 +59,10 @@
       <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Victor Fuentes</h1>
       <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle mb-0">Painter and Poet</h2>
     </div>
-    <div class="columns is-centered has-text-centered section">
+    <div class="columns is-centered has-text-centered section pt-0">
       <div class="column is-four-fifths">
         <figure class="image is-16by9">
-          <img src="../images/victor-portrait.jpg" alt="Victor Fuentes, painter" />
+          <img class="shadow" src="../images/victor-portrait.jpg" alt="Victor Fuentes, painter" />
         </figure>
         <div class="section">
         <article class="message is-dark is-medium" id="mission">
