--- a/pages/location.html
+++ b/pages/location.html
@@ -117,7 +117,7 @@
       </figure>
     </div>
     <footer/>
-    <script src="js/index.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
 
