--- a/pages/inmaculada_cruz.html
+++ b/pages/inmaculada_cruz.html
@@ -59,41 +59,28 @@
       <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Inmaculada Cruz</h1>
       <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Painter and Chef</h2>
     </div>
+    <div class="columns is-centered has-text-centered section pt-0">
+      <div class="column is-three-quarters">
+        <figure class="image is-4by3">
+          <img class="shadow" src="../images/inmaculada.jpg" alt="Inmaculada Cruz, painter" />
+        </figure>
+        <div class="section">
+        <article class="message is-dark is-medium" id="mission">
+          <div class="message-header">
+            <p>Artist's Biography</p>
+          </div>
+          <div class="message-body"><p class="is-size-6-mobile has-text-justified">Inmaculada Cruz was born on the Island of Ometepe, Nicaragua. From childhood, the flora and fauna of this island influenced her artistic development. She learned to paint the nature around her as she perceived it: the trees, flowers, animals, farms, the people and their customs. She discovered later that her painting is primitive - native and natural. It is not derivative in style and it is not dependent upon sophisticated techniques.</p>
+            <br>
+          <p class="is-size-6-mobile has-text-justified">To this day, more than sixty years after beginning her artistic journey, her painter’s soul continues to search for new forms and new techniques. She is constantly renewing the way she works. For many years now she has been painting not just the forms that she sees or that she remembers, but also those forms produced by her imagination.</p>
+          </div>
+        </article>
+        </div>
+      </div>
+    </div>
   
 <section class="section">
 </section> 
 
-
-  <!-- Modal -->
-
-  <div class="modal" id="modal-1">
-    <div class="modal-background" id="modal-bg-1"></div>
-    <div class="modal-content has-background-white py-5 px-5">
-      <h3 class="title mb-6">Our Mailing List</h3>
-      <form name="contact" method="POST" data-netlify="true">
-        <!-- Regular text input below -->
-        <div class="field">
-          <label class="label">Name</label>
-          <!-- Always use class of control for inputs like this from users -->
-          <!-- And surround it in a div with that class -->
-          <div class="control">
-            <input type="text" class="input" name="name" placeholder="Name">
-          </div>
-        </div>
-        <div class="field">
-          <label class="label">Email</label>
-          <div class="control">
-            <input type="email" class="input" name="email" placeholder="Email">
-          </div>
-              <div class="mt-6 has-text-centered">
-            <button class="button" type="submit" id="send-email">Send</button>
-          </div>    
-        </div>
-      </form>
-    </div>
-  </div>
-  <!-- End Modal -->
-    
   <footer class="footer has-text-centered is-white">
      <h2 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h2>
     <div class="block pt-4">
@@ -102,7 +89,7 @@
         <a href="http://instagram.com"target="_blank"><i class="fab fa-instagram-square fa-2x pl-3 has-text-grey" target="_blank"></i></a>
       </span>
     </div>
-    <div class="block has-text-centered my-6">
+    <div class="block has-text-centered mt-6">
       <h3 class="is-italic is-size-4 is-size-5-mobile"><a class="has-text-dark" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
     </div>
       <div class="mt-5">
