--- a/pages/staff.html
+++ b/pages/staff.html
@@ -59,6 +59,12 @@
       <h1 class="is-size-1 is-size-3-mobile has-text-light has-text-weight-light title mt-6">Staff</h1>
       <h2 class=" is-italic is-size-4 is-size-6-mobile has-text-weight-light has-text-light subtitle">Under Construction 🔨</h2>
     </div>
+    <section class="hero is-large is-hidden-mobile" id="ometepe">
+      <div class="hero-body">
+    <!-- This is where I will put in some content -->
+          <!-- And more content here -->
+      </div>
+    </section>
   
 <section class="section">
 </section> 
@@ -102,7 +108,7 @@
         <a href="http://instagram.com"target="_blank"><i class="fab fa-instagram-square fa-2x pl-3 has-text-grey" target="_blank"></i></a>
       </span>
     </div>
-    <div class="block has-text-centered my-6">
+    <div class="block has-text-centered mt-6">
       <h3 class="is-italic is-size-4 is-size-5-mobile"><a class="has-text-dark" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
     </div>
       <div class="mt-5">
