--- a/pages/victor_fuentes.html
+++ b/pages/victor_fuentes.html
@@ -91,37 +91,6 @@
     </section> 
 
 
-
-  <!-- Modal -->
-
-  <div class="modal" id="modal-1">
-    <div class="modal-background" id="modal-bg-1"></div>
-    <div class="modal-content has-background-white py-5 px-5">
-      <h3 class="title mb-6">Our Mailing List</h3>
-      <form name="contact" method="POST" data-netlify="true">
-        <!-- Regular text input below -->
-        <div class="field">
-          <label class="label">Name</label>
-          <!-- Always use class of control for inputs like this from users -->
-          <!-- And surround it in a div with that class -->
-          <div class="control">
-            <input type="text" class="input" name="name" placeholder="Name">
-          </div>
-        </div>
-        <div class="field">
-          <label class="label">Email</label>
-          <div class="control">
-            <input type="email" class="input" name="email" placeholder="Email">
-          </div>
-              <div class="mt-6 has-text-centered">
-            <button class="button" type="submit" id="send-email">Send</button>
-          </div>    
-        </div>
-      </form>
-    </div>
-  </div>
-  <!-- End Modal -->
-    
   <footer class="footer has-text-centered is-white">
      <h2 class="is-size-4"><span>&copy</span> Ometepe Art & Education 2021</h2>
     <div class="block pt-4">
@@ -130,7 +99,7 @@
         <a href="http://instagram.com"target="_blank"><i class="fab fa-instagram-square fa-2x pl-3 has-text-grey" target="_blank"></i></a>
       </span>
     </div>
-    <div class="block has-text-centered my-6">
+    <div class="block has-text-centered mt-6">
       <h3 class="is-italic is-size-4 is-size-5-mobile"><a class="has-text-dark" href="mailto:ometepeartandeducation@gmail.com">ometepeartandeducation@gmail.com</a></h3>
     </div>
       <div class="mt-5">
